# ioc-sanitizer

./: CHANGELOG.md  README.md  ROADMAP.md  ioc_sanitizer.py  pyproject.toml  sample.txt  test_ioc_sanitizer.py
.github/workflows/: tests.yml
